cabal-version:      2.4
name:               submit-api
version:            0.1.0.0

author:             ErgoLabs
maintainer:         ErgoLabs

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-dex-sdk-haskell

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeFamilies
                        TypeSynonymInstances
                        ViewPatterns

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src
    
    exposed-modules: SubmitAPI.Service
                     SubmitAPI.Config
                     SubmitAPI.Internal.Transaction
                     SubmitAPI.Internal.Balancing

    build-depends:
        rio,
        serialise,
        cardano-tx,
        network-api,
        wallet-api,
        plutus-chain-index,
        plutus-tx,
        plutus-ledger-api,
        plutus-ledger-constraints,
        plutus-contract,
        prettyprinter,
        cardano-slotting,
        cardano-api,
        mtl,
        plutus-ledger,
        bytestring,
        aeson,
        servant,
        singletons,
        either,
        aeson-gadt-th,
        plutus-script-utils,
        some,
        dependent-sum-template,
        containers,
        freer-simple,
        extra,
        text,
        dhall,
        plutus-contract,
        freer-simple,
        cardano-ledger-alonzo,
        cardano-ledger-shelley,
        cardano-ledger-core,
        cardano-ledger-shelley-ma,
        cardano-crypto-class,
        cardano-ledger-byron,
        cardano-ledger-babbage,
        ouroboros-consensus,
        microlens,
        cardano-binary,
        strict-containers,
        transformers,
        array
        -- free-er==0.1.0.0

test-suite submit-api-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Gen.CardanoTx
    Spec.Network
    Spec.Transaction
  build-depends:
    , base
    , HUnit
    , hedgehog
    , tasty
    , tasty-hunit
    , tasty-hedgehog
    , aeson
    , text
    , base16-bytestring
    , bytestring
    , plutus-ledger-api
    , cardano-api
    , ouroboros-consensus
    , random
    , plutus-tx
    , plutus-ledger-api
    , plutus-script-utils
    , plutus-ledger
    , containers
    , random-strings
    , plutus-core
    , cardano-ledger-shelley
    , cardano-ledger-babbage
    , submit-api
    , cardano-tx
    , network-api
    , wallet-api
    , serialise
    , cardano-dex-contracts-offchain
    , cardano-ledger-alonzo
