cabal-version:      2.4
name:               test
version:            0.1.0.0

author:             ErgoLabs
maintainer:

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-dex-sdk-haskell

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeFamilies
                        TypeSynonymInstances
                        ViewPatterns

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
  import: base, project-config
  exposed-modules:
      Generator
      TxSender
      Lib
      TestRedeemer
      Wiring
      Utils
      TokenNames
      ContractDeposit
  hs-source-dirs:
      src
  build-depends:
      aeson
    , ghc-prim
    , swagger2
    , hashable            == 1.3.0.0
    , lens                >= 4.7.0.1  && <5.1
    , transformers
    , warp
    , bytestring
    , plutus-core
    , plutus-ledger-api -any
    , plutus-tx -any
    , plutus-ledger
    , binary
    , scientific
    , cardano-dex-contracts
    , random
    , hex-text
    , serialise
    , cardano-api
    , cardano-tx
    , dex-core
    , resourcet
    , plutus-chain-index-core
    , either
    , wallet-api
    , network-api
    , submit-api
    , plutus-ledger
    , rio
    , quickblue
    , cardano-ledger-alonzo
    , base16-bytestring
    , text
    , containers
    , plutus-tx-plugin
    , prettyprinter
    , plutarch
    , playground-common
    , cardano-binary
    , memory
  default-language: Haskell2010

executable  test-sdk-exe
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      base >= 4.9 && < 5
    , test
  default-language: Haskell2010
