cabal-version:      2.4
name:               wallet-api
version:            0.1.0.0

author:             ErgoLabs
maintainer:         ErgoLabs

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-dex-sdk-haskell

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeFamilies
                        TypeSynonymInstances
                        TypeApplications
                        ViewPatterns

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src
    
    exposed-modules: WalletAPI.Vault
                     WalletAPI.Utxos
                     WalletAPI.TrustStore
                     WalletAPI.UtxoStore
                     WalletAPI.Internal.Crypto
                     WalletAPI.Internal.Models

    build-depends:  rio==0.1.21.0
                 ,  serialise  == 0.2.3.0
                 ,  binary     == 0.8.8.0
                 ,  cardano-tx == 0.1.0.0
                 ,  quickblue  == 0.1.0.0
                 ,  plutus-ledger-api       == 0.1.0.0
                 ,  cardano-crypto-wrapper  == 1.3.0
                 ,  cardano-crypto-class    == 2.0.0
                 ,  plutus-chain-index      == 0.1.0.0
                 ,  prettyprinter           == 1.7.0
                 ,  cardano-slotting        == 0.1.0.0
                 ,  cryptonite              == 0.27
                 ,  base16-bytestring       == 1.0.1.0
                 ,  mtl                     == 2.2.2
                 ,  plutus-ledger
                 ,  memory                  == 0.15.0
                 ,  stm                     == 2.5.0.1
                 ,  bytestring
                 ,  aeson
                 ,  servant
                 ,  singletons
                 ,  either
                 ,  aeson-gadt-th
                 ,  some
                 ,  dependent-sum-template
                 ,  containers
                 ,  freer-simple
                 ,  extra
                 ,  cardano-api
                 ,  text
                 ,  dhall