cabal-version:      2.4
name:               wallet-api
version:            0.1.0.0

author:             ErgoLabs
maintainer:         ErgoLabs

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-dex-sdk-haskell

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DerivingStrategies
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeFamilies
                        TypeSynonymInstances
                        TypeApplications
                        ViewPatterns

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src
    
    exposed-modules: WalletAPI.Vault
                     WalletAPI.Utxos
                     WalletAPI.TrustStore
                     WalletAPI.UtxoStore
                     WalletAPI.UtxoStoreConfig
                     WalletAPI.Internal.Crypto
                     WalletAPI.Internal.Models

    build-depends:  rio
                 ,  serialise  
                 ,  binary    
                 ,  cardano-tx 
                 ,  quickblue  
                 ,  plutus-tx  
                 ,  plutus-ledger-api       
                 ,  cardano-crypto-wrapper  
                 ,  cardano-crypto-class    
                 ,  plutus-chain-index      
                 ,  prettyprinter           
                 ,  cardano-slotting       
                 ,  cryptonite              
                 ,  base16-bytestring      
                 ,  mtl                     
                 ,  plutus-ledger
                 ,  memory                  
                 ,  stm                    
                 ,  bytestring
                 ,  aeson
                 ,  spectrum
                 ,  servant
                 ,  singletons
                 ,  either
                 ,  aeson-gadt-th
                 ,  some
                 ,  dependent-sum-template
                 ,  containers
                 ,  freer-simple
                 ,  extra
                 ,  cardano-api
                 ,  text
                 ,  dhall
                 ,  retry
                 ,  exceptions
                 ,  hlog
                 ,  algebra-core
                 ,  rocksdb-haskell
                 ,  resourcet
                 ,  conduit